dev: estb use of .env and fixed nginx routing issues

--- a/web-server/react-app/nginx_conf.conf
+++ b/web-server/react-app/nginx_conf.conf
@@ -3,7 +3,8 @@ server {
     listen 3000;
 
     location / {
-			root C:/Users/micke/Downloads/nginx-1.17.10/conf/build/;
-            index index.html;
+        root C:/Users/micke/Downloads/nginx-1.17.10/conf/build/;
+        index index.html;
+        try_files $uri /index.html;
     }
 }
