--- a/web-server/react-app/package.json
+++ b/web-server/react-app/package.json
@@ -10,11 +10,14 @@
     "dotenv": "^8.2.0",
     "react": "^16.13.1",
     "react-confirm-alert": "^2.6.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-places-autocomplete": "^7.2.1",
     "react-recaptcha": "^2.3.10",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "universal-cookie": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
