--- a/web-server/react-app/nginx_conf.conf
+++ b/web-server/react-app/nginx_conf.conf
@@ -1,9 +1,11 @@
 server {
-
+    # server listening at port 3000
     listen 3000;
 
     location / {
+        # place where static files are located locally
         root C:/Users/micke/Downloads/nginx-1.17.10/conf/build/;
+        # HTML file to serve as index
         index index.html;
         try_files $uri /index.html;
     }
