--- a/web-server/react-app/Dockerfile
+++ b/web-server/react-app/Dockerfile
@@ -5,7 +5,7 @@ FROM node:alpine as build-stage
 WORKDIR /react-app
 
 # required to install packages
-COPY package*.json ./
+COPY package.json ./
 
 # installing npm packages
 RUN npm install
