--- a/web-server/react-app/Dockerfile
+++ b/web-server/react-app/Dockerfile
@@ -20,10 +20,17 @@ COPY .env ./
 COPY public ./public
 
 # copying over our nginx config file
-COPY nginx_container.conf ./
+COPY nginx_container.conf.template ./
+
+COPY nginxPop.sh ./
+
+# collecting proxy env var
+ARG REACT_APP_NGINXPROXY
+
+ENV REACT_APP_NGINXPROXY $REACT_APP_NGINXPROXY
 
 # creating production build to serve through nginx
-RUN npm run build
+RUN env && npm run build
 
 # starting second, nginx build-stage
 FROM nginx:1.15
@@ -31,11 +38,19 @@ FROM nginx:1.15
 # removing default nginx config file
 RUN rm /etc/nginx/conf.d/default.conf
 
-# exposing port 3000 on container
-EXPOSE 3000
-
 # copying our nginx config
-COPY --from=build-stage /react-app/nginx_container.conf /etc/nginx/conf.d/
+COPY --from=build-stage /react-app/nginx_container.conf.template /etc/nginx/conf.d/
+
+COPY --from=build-stage /react-app/nginxPop.sh /etc/nginx/conf.d/
 
 # copying production build from last stage to serve through nginx
 COPY --from=build-stage /react-app/build/ /usr/share/nginx/html
+
+# exposing port 3000 on container
+EXPOSE 3000
+
+RUN chmod 777 /etc/nginx/conf.d/nginxPop.sh
+
+ENTRYPOINT ["/etc/nginx/conf.d/nginxPop.sh"]
+
+CMD ["nginx", "-g", "daemon off;"]
