--- a/web-server/react-app/nginx_conf.conf
+++ b/web-server/react-app/nginx_conf.conf
@@ -1,12 +1,21 @@
 server {
     # server listening at port 3000
-    listen 3000;
+    listen 8080;
+
+    # place where static files are located locally
+    root C:/Users/micke/Downloads/nginx-1.17.10/conf/build/;
+    # HTML file to serve as index
+    index index.html;
 
     location / {
-        # place where static files are located locally
-        root C:/Users/micke/Downloads/nginx-1.17.10/conf/build/;
-        # HTML file to serve as index
-        index index.html;
         try_files $uri /index.html;
+    }
+
+    location /api {
+        rewrite /api/(.*) /$1 break;
+        proxy_pass http://127.0.0.1:3000;
+        client_max_body_size 100m;
+        add_header 'Access-Control-Allow-Origin' http://127.0.0.1:8080;
+        add_header 'Access-Control-Allow-Credentials' 'true';
     }
 }
